# natureal

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/: camera.h  game.h  material.h  particle.h  player.h  renderer.h  world.h  world_generator.h
engine/src/: camera.cpp  material.cpp  particle.cpp  player.cpp  renderer.cpp  world_generator.cpp
game/: CMakeLists.txt
game/include/: game.h
game/src/: game.cpp  main.cpp  player.cpp  world.cpp
include/core/: Engine.hpp  ResourceManager.hpp
include/physics/: PhysicsWorld.hpp
include/renderer/: Renderer.hpp
include/utils/: Logger.hpp
include/world/: Chunk.hpp  FireSimulation.hpp  WaterSimulation.hpp  WorldGenerator.hpp
install/: .gitignore  install.sh
shader/: particle.frag  particle.vert
src/: CMakeLists.txt
src/core/: Engine.cpp  ResourceManager.cpp
src/physics/: PhysicsWorld.cpp
src/renderer/: Renderer.cpp  Renderer.mm
src/utils/: Logger.cpp
src/world/: WorldGenerator.cpp
tests/: CMakeLists.txt  EngineTest.cpp
